Add redirect URL.
